food-donator-frontend/src/app/components/receiver-map/receiver-map.component.css
* {
  --primary: #6369D1; /* Violet Blue Crayola */
  --secondary: #C6C6C6; /* Silver */

  --warning: #FDB849; /* Maximum Yellow Red */
  --danger: #F21B3F; /* Red Munsell */
  --success: #60B67A; /* Medium Sea Green */

  --dark: #36363E; /* Jet */
  --darkRGB: 21, 21, 24;
  --light: #FBF5F3; /* Snow */

  --deep-purple-accent-2: #7c4dff;
  --indigo-lighten-2: #7986cb;
  --indigo-lighten-3: #9fa8da;
  --indigo-lighten-4: #c5cae9;
  --indigo-lighten-5: #e8eaf6;
}

/* Custom scrollbar */
/* width */
::-webkit-scrollbar {
  width: 10px;
  border-radius: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: grey;
  border-radius: 25px;
  height: 90%;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #8b8b8b;
  border-radius: 25px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

google-map {
  display: block;
  width: 100%;
  height: 100%;
}

p {
  padding: 0;
  margin: 0;
  margin-bottom: 10px;
  margin-top: 10px;
}

.carousel {
  width: 100%;
  min-height: 53vh !important;
  height: 53vh !important;
}

.carousel-item {
  overflow: hidden;
}

.carousel-item.card {
  /* width: 400px !important; */
  max-height: 40vh !important;
  min-height: 40vh !important;
  height: 40vh !important;
}

.card .carousel.carousel-slider .carousel-item {

}

.carousel-left-chevron {
  position: absolute;
  top: 50%;
  left: 1%;
  z-index: 999;
}

.carousel-right-chevron {
  position: absolute;
  top: 50%;
  right: 0%;
  z-index: 999;
}

.card-content {
  word-wrap: normal;
}

/** Container for Donor Select and Saved Pins Switch */
.wrapper {
  margin-right: 25px;
}

#donorSelect {
  position: absolute;
  top: 0%;
  right: 10px;
  width: 250px;
  padding-right: 25px;
  border-radius: 2px;
  background-color: var(--indigo-lighten-3);
}

#donorSelect input {
  color: white;
}

#donorSelectLabel {
  color: var(--indigo-lighten-5);
}

#donorSelect, #donorSelectLabel {
  padding-top: 25px;
  padding-bottom: 10px;
  padding-left: 25px;
}

.myLocationBtn {
  position: absolute;
  display: flex !important;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  top: 100px;
  right: 10px;
  padding-top: 5px !important;
  padding-bottom: 5px !important;
  padding-left: 10px !important;
  padding-right: 0px !important;
  margin-top: 10px !important;
  line-height: 100%;
  width: 250px !important;
  background-color: var(--indigo-lighten-3);
}

.fixed-action-btn {
  right: 10px;
}

.center {
  height: fit-content;
  width: fit-content;
}

/* .booksmarksIcon {
  padding-right: 15px;
} */

#modal1 {
  z-index: 99999;
  background-color: var(--indigo-lighten-5);
  overflow-y: scroll;
}

.modal.bottom-sheet {
  max-height: 70%;
  height: 70%;
}

tr, td, th {
  height: 40px;
  padding: 2px;
}

#savedPinsContainer {
  display: flex;
  flex-direction: row;
  margin-top: 10px;
}

#savedPinsContainer > .material-symbols-outlined {
  padding: 0%;
  margin-right: 8px;
  font-size: 32px;
}

#modalHeading {
  display: inline;
  width: fit-content;
  margin: 0;
}

.material-symbols-outlined:hover {
  color: var(--primary);
}

.btn {
  margin: 0;
  width: 200px;
  display: inline-block;
}

#actionButtonsContainer {
  margin: 0;
}

#logout {
  position: absolute;
  bottom: 25px;
  left: 25px;
}

.material-symbols-outlined:active {
  color: var(--dark);
}

.material-symbols-outlined:hover {
  color: var(--dark);
}

#phoneNumField {
  display: inline;
  width: 75%;
}

/* #editPhoneNumBtn {
  display: inline;
  margin-left: 2px;
} */

input[type="text"]:read-only, h1, h2, h3, h4, h5, h6, form {
  cursor: default;
}

.material-symbols-outlined:hover {
  cursor: pointer;
}

.select-wrapper input.select-dropdown {
  z-index: 0;
}

/* Bigger screens */
@media only screen and (min-width: 769px) {
  #savedPinsContainer {
    line-height: 32px;
  }

  #scheduleContainer {
    width: 50%;
  }

  #actionButtonsContainer {
    display: inline-block;
    margin: 0;
    margin-left: 35px;
    margin-right: 35px;
  }

  /* Hide scrollbar for Chrome, Safari and Opera */
  #modal1::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  #modal1 {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }
}

